<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello">Hello!</string>
    <string name="forgot_password">Forgot password</string>
    <string name="logout">Logout</string>
    <string name="login_emailHint">Enter Email</string>
    <string name="login_passwordHint">Enter Password</string>
    <string name="login_with_biometrics">Login with Biometrics</string>
    <string name="reset_password">Reset Password</string>
    <string name="secondary_emailHint">Enter Secondary Email</string>
    <string name="forget_description">Enter the secondary email associated with this account and we will send you the instructions on how to reset your password</string>
    <string name="check_your_mail">Check Your Mail</string>
    <string name="successful_recovery">An email with the recovery instructions has been sent to your email!</string>
    <string name="app_name">HR</string>
    <string name="payslipHeader">Payslip</string>
    <string name="payslipDownloadConsolidatedPayslip">Download Consolidated Payslip</string>
    <string name="payslipViewAll">View all</string>
    <string name="recentLabel">Recent</string>
    <string name="download">Download</string>
    <string name="moreDetailLabel">More Details</string>
    <string name="payslipConsolidatedHeader">Consolidated Payslip</string>
    <string name="homePageHeader">HomePage</string>
    <string name="attendancePageHeader">Attendance</string>
    <string name="payslipPageHeader">Payslip</string>
    <string name="leavePageHeader">Leave</string>
    <string name="signInPageHeader">Sign In</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--For leave -->
    <string name="cancel_leave">Cancel Leave</string>
    <string name="leave_balance">Leave Balance</string>
    <string name="leave_balance_annual">Annual Leave</string>
    <string name="leave_balance_sick">Sick Leave</string>
    <string name="leave_balance_maternity">Maternity Leave</string>
    <string name="leave_apply_button">Apply Leave</string>
    <string name="leave_record">Leave Record</string>
    <string name="leave_view_all_record">View All Record</string>

    <string name="leave_type">Leave Type</string>
    <string name="leave_start_date">Start Date</string>
    <string name="leave_end_date">End Date</string>
    <string name="leave_days">Days</string>
    <string name="leave_full_day">Full Day</string>
    <string name="leave_half_day">Half Day</string>
    <string name="leave_supervisor">Supervisor</string>
    <string name="reason">Reason</string>
    <string name="leave_status">Status</string>
    <string name="reasonHint">Enter Reason</string>
    <string name="leave_available">Available Leave:</string>
    <string name="choose_leave_type">Choose Leave Type</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="choose_supervisor">Choose Supervisor</string>
    <string name="select_end_date">Select End Date</string>
    <string name="confirmation_apply_for_leave">Are you sure you want to apply for leave?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirmation_cancel_leave">Are you sure you want to cancel the leave?</string>
    <string name="upload_mc">Upload MC</string>

    <string name="leave_annual">Annual</string>
    <string name="leave_start_date_end_date">Start Date - End Date</string>
    <string name="leave_2_2">2/2</string>
    <string name="full">full</string>
    <string name="leave_medical_certificate">Medical Certificate</string>

    <string-array name="leaveType">
        <item>Annual Leave</item>
        <item>Sick Leave</item>
        <item>Maternity Leave</item>
    </string-array>

    <string-array name="leaveSupervisor">
        <item>Mary Tan</item>
        <item>Alex Lim</item>
    </string-array>

    <style name="MonthPickerDialogStyle">
        <item name="monthBgColor">@color/white</item>
        <item name="monthBgSelectedColor">@color/main</item>
        <item name="monthFontColorSelected">@color/white</item>
        <item name="monthFontColorNormal">@android:color/black</item>
        <item name="monthFontColorDisabled">@android:color/darker_gray</item>

        <item name="headerBgColor">@color/main</item>
        <item name="headerFontColorSelected">#fff</item>
        <item name="headerFontColorNormal">#85FFFFFF</item>
        <item name="headerTitleColor">#fff</item>

        <item name="dialogActionButtonColor">@color/main</item>
    </style>

    <!--For attendance -->
    <string name="attendance_live_location">Live Location</string>
    <string name="attendance_get_location">Get Location</string>
    <string name="attendance_onTime">on Time</string>
    <string name="attendance_late">Late</string>
    <string name="attendance_absent">Absent</string>
    <string name="tab_attendance">View Attendance Summary</string>
    <string name="attendance_clockIn">Clock In</string>
    <string name="attendance_clockOut">Clock Out</string>
    <string name="attendance_date">Date</string>
    <string name="attendance_confirmation_submit">Are you sure you want to submit your reason?</string>
    <string name="attendance_success_submit">Reason for being late is submitted!</string>
    <string name="attendance_clock_in_out">CLOCK IN / CLOCK OUT</string>

    <!--For payslip -->
    <string name="payslip_total_earning">Total Earning</string>
    <string name="payslip_basic_wage">Basic Wage</string>
    <string name="payslip_bonus">Bonus</string>
    <string name="payslip_ot">OT</string>
    <string name="latest_payslip">Latest Payslip</string>
    <string name="payslip_detail_deduction">(-) Deduction</string>
    <string name="payslip_detail_earning">(+) Earning</string>
    <string name="payslip_emailHint">Email</string>
    <string name="payslip_passwordHint">Password</string>
    <string name="payslip_download">Download</string>
    <string name="payslip_net_pay_summary">Net pay:</string>
    <string name="payslip_net_pay">Net Pay</string>
    <string name="payslip_deduction">Deduction</string>
    <string name="payslip_date_from">Date (From)</string>
    <string name="payslip_date_to">Date (To)</string>
    <string name="payslip_total_deduction">Total Deduction</string>
    <string name="payslip_assistance_fund">Assistance Fund</string>
    <string name="payslip_ope">OPE</string>
    <string name="payslip_cpf">CPF</string>

    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="textview">TextView</string>
    <string name="home_attendance_summary">Monthly Attendance Summary:</string>
    <string name="home_days_worked">Days Worked</string>
    <string name="home_days_missed">Days Missed</string>
    <string name="home_weekly_average">Weekly Average</string>
    <string name="home_total_ot">Total OT</string>

</resources>
