<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity"
    tools:showIn="nav_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homePage"
            android:orderInCategory="100"
            android:title="@string/homePageHeader"
            app:showAsAction="never" />
        <item
            android:id="@+id/payslipPage"
            android:orderInCategory="100"
            android:title="@string/payslipPageHeader"
            app:showAsAction="never" />
        <item
            android:id="@+id/leavePage"
            android:orderInCategory="100"
            android:title="@string/leavePageHeader"
            app:showAsAction="never" />
        <item
            android:id="@+id/attendencePage"
            android:orderInCategory="100"
            android:title="@string/attendancePageHeader"
            app:showAsAction="never" />
    </group>
</menu>