<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="348dp"
        android:layout_height="230dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="232dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/payslip_emailHint"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/payslip_passwordHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/cancelButton"
            android:backgroundTint="@android:color/holo_red_light"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="180dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/downloadConsoButton"
            android:backgroundTint="@android:color/holo_green_light"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="180dp"
            android:text="@string/payslip_download" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>