<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@drawable/table_border">

                <TextView
                    android:id="@+id/textViewLeaveType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/leave_type"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/textViewLeaveTypeDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/leave_annual"
                    android:textSize="20sp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@drawable/table_border">

                <TextView
                    android:id="@+id/textViewLeaveDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/leave_start_date_end_date"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewLeaveDateDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/leave_2_2"
                    android:textSize="20sp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@drawable/table_border">

                <TextView
                    android:id="@+id/textViewLeaveDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/leave_days"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/textViewLeaveDaysDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/full"
                    android:textSize="20sp"/>

            </TableRow>



            <!--            <TableRow-->
            <!--            for no of days    android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/textView14"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="TextView" />-->
            <!--            </TableRow>-->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@drawable/table_border">

                <TextView
                    android:id="@+id/textViewLeaveSupervisor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/leave_supervisor"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/textViewLeaveSupervisorDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/full"
                    android:textSize="20sp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@drawable/table_border">

                <TextView
                    android:id="@+id/textViewLeaveReason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/reason"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/textViewLeaveReasonDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/full"
                    android:textSize="20sp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@drawable/table_border">

                <TextView
                    android:id="@+id/textViewLeaveStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/leave_status"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/textViewLeaveStatusDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/full"
                    android:textSize="20sp"/>

            </TableRow>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/table_border">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    >

                    <TextView
                        android:id="@+id/textViewLeavePicture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/leave_medical_certificate"
                        android:textSize="20sp"/>


                </TableRow>

                <TableRow>

                    <ImageView
                        android:id="@+id/imageViewLeave"
                        android:layout_width="322dp"
                        android:layout_height="200dp"
                        android:gravity="center"
                        android:src="@drawable/table_border" />
                </TableRow>
            </TableLayout>

        </TableLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>