<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTotalDeduction"
        android:layout_width="416dp"
        android:layout_height="35dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/totalDeduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="12dp"
            android:text="@string/textview"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalDeductionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/payslip_total_deduction"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAsstFund"
        android:layout_width="416dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTotalDeduction"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:id="@+id/asstFund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="15dp"
            android:text="@string/textview"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/asstFundLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/payslip_assistance_fund"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOpeOthers"
        android:layout_width="416dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewAsstFund"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:id="@+id/opeOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="15dp"
            android:text="@string/textview"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/opeOthersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/payslip_ope"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCPF"
        android:layout_width="416dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewOpeOthers"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:id="@+id/cpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="15dp"
            android:text="@string/textview"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cpfLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/payslip_cpf"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>