<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTotalEarning"
        android:layout_width="416dp"
        android:layout_height="35dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/totalEarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalEarningLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/payslip_total_earning"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBasicWage"
        android:layout_width="416dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTotalEarning"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:id="@+id/basicWage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="15dp"
            android:text="TextView"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/basicWageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/payslip_basic_wage"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBonus"
        android:layout_width="416dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewBasicWage"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:id="@+id/bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="15dp"
            android:text="TextView"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/bonusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/payslip_bonus"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOt"
        android:layout_width="416dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewBonus"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:id="@+id/ot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="15dp"
            android:text="TextView"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/otLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/payslip_ot"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>